Update the paragraph displayed on the page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <p onClick="makeGreen()">This is a paragraph!</p>
+  <p onClick="makeGreen()">This is a paragraph! Click to turn green. Open the console to see example messages.</p>
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'Hugo', age: 8 }];
